I fixed the statistics view, i dont wanna say it but IM THE FOCKIN BEST